[gd_scene load_steps=5 format=3 uid="uid://dnnn5a6rgrwff"]

[ext_resource type="Texture2D" uid="uid://dbsk6owi8j5wc" path="res://circ.png" id="1_14tcn"]
[ext_resource type="Script" path="res://ball.gd" id="2_vccua"]
[ext_resource type="Texture2D" uid="uid://clffwer5quduk" path="res://cd.png" id="2_y0cmn"]
[ext_resource type="Script" path="res://cd.gd" id="4_16bfv"]

[node name="Node2D" type="Node2D"]
position = Vector2(58, 32)
scale = Vector2(0.46, 0.46)

[node name="bolinha" type="Sprite2D" parent="." node_paths=PackedStringArray("centro")]
modulate = Color(0.160784, 0.160784, 0.160784, 1)
z_index = 2
position = Vector2(590, 184)
scale = Vector2(0.048, 0.048)
texture = ExtResource("1_14tcn")
script = ExtResource("2_vccua")
speed = 1.5
centro = NodePath("../cd")
raio = 145

[node name="cd" type="Sprite2D" parent="." node_paths=PackedStringArray("prompt_object")]
texture_filter = 1
position = Vector2(588, 339)
scale = Vector2(0.763, 0.761)
texture = ExtResource("2_y0cmn")
script = ExtResource("4_16bfv")
prompt_object = NodePath("../press_prompt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 326)

[node name="press_prompt" type="Sprite2D" parent="."]
modulate = Color(0.447059, 0.447059, 0.447059, 0.254902)
position = Vector2(465, 243)
scale = Vector2(0.135, 0.135)
texture = ExtResource("1_14tcn")
